@@ -2658,21 +2658,23 @@ sub has { __PACKAGE__->Test::ModuleVersion::Object::Simple::attr(@_) }
 has before => '';
 has distnames => sub { {} };
 has default_ignore => sub { ['Perl', 'Test::ModuleVersion'] };
-has ignore => sub { [] };
 has lib => sub { [] };
 has modules => sub { [] };
 has privates => sub { {} };
 
 sub detect {
-  my $self = shift;
+  my ($self, %opts) = @_;
+  my $ignore = $opts{ignore} || [];
   
   # Detect installed modules
   my $ei = ExtUtils::Installed->new;
-  my $modules = [];
-  push @$modules, [$_ => $ei->version($_)] for sort $ei->modules;
-  $self->modules($modules);
-  
-  return $self;
+  my @modules;
+  for my $module (sort $ei->modules) {
+    next if grep { $module eq $_ } @$ignore;
+    push @modules, [$module => $ei->version($module)];
+  }
+
+  return \@modules;
 }
 
 sub test_script {
@@ -2741,8 +2743,6 @@ EOS
   my $test_count = 0;
   for my $m (@{$self->modules}) {
     my ($module, $version) = @$m;
-    next if grep { $module eq $_ } @{$self->default_ignore};
-    next if grep { $module eq $_ } @{$self->ignore};
     $code .= "  # $module\n"
       . "  \$require_ok = require_ok('$module');\n"
       . "  \$version_ok = is(\$${module}::VERSION, '$version', '$module version: $version');\n"
@@ -2826,87 +2826,63 @@ sub _source {
 
 =head1 NAME
 
-Test::ModuleVersion - Module Version Test Generator (EXPERIMENTAL)
+Test::ModuleVersion - Module version test generator (EXPERIMENTAL)
 
 =head1 SYNOPSIS
 
   use Test::ModuleVersion;
-  
-  # Manually
   my $tm = Test::ModuleVersion->new;
   $tm->modules([
     ['DBIx::Custom' => '0.2108'],
     ['Validator::Custom' => '0.1426']
   ]);
-  print $tm->test_script;
+  $tm->test_script(output => 't/module.t');
 
-  # Automatically
-  my $tm = Test::ModuleVersion->new;
-  $tm->ignore([qw/Devel::NYTProf MySQL::Diff/]);
-  $tm->detect;
-  print $tm->test_script;
-  
 =head1 DESCRIPTION
 
-It is very difficult to install same modules in development
-environment and production environment.
+L<Test::ModuleVersion> is test generator for module version check.
+If you run the test generated by L<Test::ModuleVersion>,
+you can check the module version.
 
-C<cpan> is single versioning system, so you can't install
-specified version module well.
+If module version test is failed, you can list module URLs.
 
-Installation is very hard work if therer many modules.
-L<Test::ModuleVersion> help you.
+=head2 Create version test
 
-=head2 Create version checking test in C<development> environment.
+Let's create version test.
 
-At first, you create test script in C<development> environment.
-
-L<Test::ModuleVersion> create version checking test manually
-or automatically
-
-This is C<manually> eamples.
-
+  # mvt.pl
   my $tm = Test::ModuleVersion->new;
   $tm->modules([
     ['DBIx::Custom' => '0.2108'],
     ['Validator::Custom' => '0.1426']
   ]);
-  print $tm->test_script;
+  $tm->test_script(output => 't/module.t');
 
-You set C<modules> attribute which is list of module name and version number.
-You can get module test script by C<test_script> method.
+C<modules> attribute is set to the pairs of module and version.
+C<test_script> method print version test into C<t/module.t> file.
 
-run this script(name is C<mvt.pl>) to create test.
+Run C<mvt.pl>
 
- $ perl mvt.pl > t/module.t
+  $ perl mvt.pl
 
-the following-like test is created.
+Test script C<t/module.t> is created.
 
-    require_ok('DBIx::Custom');
-    module_version_is('DBIx::Custom', ExtUtils::Installed->version('DBIx::Custom'), '0.2108');
+  ...
+  $require_ok = require_ok('DBIx::Custom');
+  $version_ok = is($DBIx::Custom::VERSION, '0.2108', 'DBIx::Custom version: 0.2108');
 
-    require_ok('Validator::Custom');
-    module_version_is('Validator::Custom', ExtUtils::Installed->version('Validator::Custom'), '0.1426');
+  $require_ok = require_ok('Validator::Custom');
+  $version_ok = is($Validator::Custom::VERSION, '0.1426', 'DBIx::Custom version: 0.1426');
+  ...
 
-Or you can create module test C<automatically>.
+=head2 Run version test
 
-  my $tm = Test::ModuleVersion->new;
-  $tm->ignore([qw/Devel::NYTProf MySQL::Diff/]);
-  $tm->detect;
-  print $tm->test_script;
+Run version test.
 
-C<ignore> attribute is set to modules you want to ignore.
-C<detect> method detect all installed module and C<modules> attribute is set properly.
+  $ perl t/module.t
 
-=head2 Run test in C<production> environment.
-
-Second, the test script is moved to C<production> environment,
-and run the test.
-
-  perl t/module.t
-
-If the version in C<production> environment is different from C<development> one,
-test will fail.
+If module is not installed or version is different,
+test fail.
 
   ok 1 - require DBIx::Custom;
   not ok 2 - DBIx::Custom version: 0.2108
@@ -2918,34 +2894,66 @@ test will fail.
   ok 2 - require Validator::Custom;
   ok 3 - Validator::Custom version: 0.1426
 
-It is very useful because you can know the module differnce.
+=head2 List module URLs
 
-=head2 Get module URLs
+You can list moudle URLs by C<list> command
 
-If test fail, you usually install the module manually, it is very hard work.
-you can get module URLs by C<list> command.
+  $ perl t/module.t list
 
-  $ perl module.t list
-
-URLs of all module in test sciprt is printed.
+All module URLs in version test is output to C<STDOUT>.
 
   http://cpan.metacpan.org/authors/id/K/KI/KIMOTO/DBIx-Custom-0.2108.tar.gz
   ...
 
-Internally, metaCPAN api is used to get module URL.
-if you have proxy server,
-you can set $ENV{http_proxy}.
-
-You can also get test failed module URL by C<--fail> option.
+You can list only test failed module URLs by C<--fail> option
 
   $ perl module.t list --fail
 
-Module installation using L<cpanm> is very easy
-if cpanm is in current directory.
+=head1 Advanced
+
+=head2 Module installation by L<cpanm>
 
   $ perl t/module.t list --fail | perl cpanm -L extlib
 
-Modules is installed into C<extlib> directory.
+Module installation is very easy. Test failed module
+is installed into C<extlib> directory by L<cpanm>.
+
+=head2 User Agent
+
+L<Test::Module> version switch two User Agent as necessary.
+
+=over 2
+
+=item LWP::UserAgent
+
+=item HTTP::Tiny
+
+=back
+
+These module is used to get module URLs from metaCPAN.
+
+
+
+
+=head2 Using HTTP proxy
+
+
+
+you can set $ENV{http_proxy}.
+
+  export http_proxy=http://hostname:3001
+
+Note that C<HTTP::Tiny> don't support proxy authentication.
+If you want to use proxy authentication, L<LWP::UserAgent> 5.802+
+must be installed.
+
+  export http_proxy=http://username:password@hostname:3001
+
+user name and password contains not available string in URL.
+the string must be URL encoded.
+
+  export http_proxy=http://kimoto%40gmail.com:xituei@hostname:3001
+
 
 If L<LWP::UserAgent> is available and version is 5.802+, test script use LWP::UserAgent
 for HTTP request.
@@ -3017,24 +3025,6 @@ The following code is added to test script.
 If the module is installed in this directory,
 module version test is success.
 
-=head2 C<ignore>
-
-  my $ignored_modules = $tm->ignore;
-  $tm = $tm->ignore([qw/Devel::NYTProf MySQL::Diff/]);
-
-ignored modules you don't want to contain in test script.
-
-=head2 C<default_ignore>
-
-  my $ignored_modules = $tm->ignore;
-  $tm = $tm->ignore(['Perl', 'Test::ModuleVersion']);
-
-Default ignored modules you don't want to contain in test script,
-default to C<['Perl']>.
-
-Don't use C<exculde_default> attribute usually.
-use C<ignore> attribute instead.
-
 =head2 C<modules>
 
   my $modules = $tm->modules;
@@ -3069,16 +3059,19 @@ You also use this attribute with C<distnames> attribute.
 
 =head2 C<detect>
 
-  $tm->detect;
+  my $modules = $tm->detect;
+  my $modules = $tm->detect(ignore => ['Perl', 'Test::ModuleVersion']);
 
-Detect all installed module and C<modules> attribute is set.
+Detect all installed module.
+If you set C<ignore> option, the module is ignored.
 
 =head2 C<test_script>
 
-  print $tm->test_script;
+  my $test_script = $tm->test_script;
+  $tm->test_script(output => 't/module.t');
 
-Test script which contains module version tests.
-C<modules> attirubtes is used to create test script.
+Return version check test.
+If C<output> option is set, test is output to the file.
 
 =head1 AUTHOR
 
